# esp32c6-ble

./: Cargo.toml  ble_client.py  build.rs  diagram.json  partations.csv  sdkconfig  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
ui/vivi/: Cargo.toml  README.md
ui/vivi/docs/: book.toml
ui/vivi/docs/src/: SUMMARY.md  introduction.md
ui/vivi/docs/src/foundation/: app_bar_base.md  border.md  button_base.md  check_box_base.md  combo_box_base.md  combobox_base.md  focus_touch_area.md  form_element_base.md  group_box_base.md  horizontal_layout_base.md  icon_base.md  index.md  range_base.md  scroll_view_base.md  tab_bar_base.md  text_base.md  text_input_base.md  vertical_layout_base.md
ui/vivi/src/: lib.rs
ui/vivi/ui/: foundation.slint  magic.slint
ui/vivi/ui/foundation/: app_bar_base.slint  border.slint  button_base.slint  check_box_base.slint  combobox_base.slint  focus_touch_area.slint  form_element_base.slint  group_box_base.slint  horizontal_layout_base.slint  icon_base.slint  range_base.slint  scroll_view_base.slint  tab_bar_base.slint  text_base.slint  text_input_base.slint  vertical_layout_base.slint
ui/vivi/ui/magic/: app_bar.slint  check_box.slint  circular_progress_slider.slint  combobox.slint  experimental.slint  filled_button.slint  form_element.slint  group_box.slint  icon_button.slint  icons.slint  list_view.slint  magic_button_base.slint  magic_horizontal_box.slint  magic_icon.slint  magic_list_view.slint  magic_progress_slider_base.slint  magic_text.slint  magic_vertical_box.slint  magic_window.slint  outline_button.slint  progress_slider.slint  scroll_view.slint  state_layer.slint  styling.slint  switch.slint  tab_bar.slint  text_area.slint  text_button.slint  text_field.slint  time_picker_popup.slint
(+58 files in other folders)
