[package]
name = "esp32c6-ble"
version = "0.1.0"
authors = ["wszxlsun <wszxlsun@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "esp32c6-ble"
harness = false

[profile.release]
opt-level = "s"
strip = true
lto = true

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false , features = ["std", "alloc", "std", "experimental", "native"]}
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4.0"
embedded-graphics = { version = "0.8.1" , features = ["fixed"]}
esp-idf-hal = { version = "0.43.1", features = ["std"] }
esp32-nimble = "0.6.1"
smart-leds = "0.4.0"
smart-leds-trait = { version = "0.3" }
anyhow = "1.0.86"
chrono = { version = "0.4.37", default-features = false, features = ["libc", "clock"] }
slint = { version = "1.6.0", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded", "libm"] }
serde = { version = "1.0.203", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.117"

[build-dependencies]
embuild = "0.31.3"
anyhow = "1.0.81"
slint-build = "1.6.0"